overflow visible lead-in under 401px - fixed

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -408,7 +408,9 @@ p a:hover {color: #6F9400;}
 }
 
  @media screen and (max-width: 401px) {   
-     overflow: visible !important;
+    .lead-in {
+      overflow: visible !important;
+    }
 }
 
 .lead-in:first-letter {
